# dealforge-crm

./: LICENSE  README.md
backend/: .dockerignore  alembic.ini  pyproject.toml  pytest.ini
backend/diagrams/: Диаграмма без названия.drawio
backend/migrations/: env.py
backend/migrations/versions/: 2ec4d164f5a2_home2.py  536fe1da66a5_home1.py
backend/src/backend/: config.py  main.py
backend/src/backend/application/auth/: errors.py
backend/src/backend/application/auth/dtos/: change_password.py  get_me.py  login_user.py
backend/src/backend/application/auth/use_cases/: change_password.py  get_me.py  login_user.py  refresh_token.py  update_me.py
backend/src/backend/application/funnel/: repository.py
backend/src/backend/application/funnel/dtos/: create_funnel.py  list_funnel.py  update_funnel.py
backend/src/backend/application/funnel/use_cases/: create_funnel.py  delete_funnel.py  get_funnel.py  list_funnel.py  update_funnel.py
backend/src/backend/application/shared/: errors.py
backend/src/backend/application/shared/dtos/: pagination.py
backend/src/backend/application/user/: errors.py  repository.py
backend/src/backend/domain/funnel/: entity.py
backend/src/backend/domain/lead/: entity.py
backend/src/backend/domain/shared/: errors.py
backend/src/backend/domain/shared/user/: entity.py
backend/src/backend/domain/user/: entity.py
backend/tests/unit/application/funnel/: fake_repository.py
backend/tests/unit/domain/funnel/: test_entity.py
backend/tests/unit/domain/shared/: specification.py
backend/tests/unit/domain/user/: test_entity.py
(+65 files in other folders)
