[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "rakhimberdiyeva",email = "malikarakh07@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "fastapi (>=0.135.2,<0.136.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)",
    "sqlalchemy (>=2.0.49,<3.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "alembic (>=1.18.4,<2.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "passlib (>=1.7.4,<2.0.0)",
    "argon2-cffi (>=25.1.0,<26.0.0)",
    "python-jose (>=3.5.0,<4.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "pydantic-settings (>=2.13.1,<3.0.0)",
    "fastapi-utils (>=0.8.0,<0.9.0)",
    "uvicorn (>=0.44.0,<0.45.0)",
    "typing-inspect (>=0.9.0,<0.10.0)",
    "email-validator (>=2.3.0,<3.0.0)"
]

[tool.poetry]
packages = [{include = "backend", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
test = [
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-cov (>=7.1.0,<8.0.0)",
    "mypy (>=1.19.1,<2.0.0)",
    "ruff (>=0.15.7,<0.16.0)",
    "freezegun (>=1.5.5,<2.0.0)",
    "radon (>=6.0.1,<7.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)"
]
